5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1684_1104.log
== SUBMITION (2019-04-19 13:13:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
=float (input ("a: "))
b=float (input ("b: "))
c=float (input ("c: "))
d=float (input ("d: "))
if (b>a and d>c):
    if  ((b>=c and d>=a) or (d>=a and b>=c)):
        print ("Intervalo 1:",a,",",b)
        print ("Intervalo 2:",c,",",d)
        print ("Ha intersecao")
    else:
        print ("Intervalo 1:",a,",",b)
        print ("Intervalo 2:",c,",",d)
        print ("Nao ha intersecao")
else:
    print ("Intervalo 1:",a,",",b)
    print ("Intervalo 2:",c,",",d)
    print ("Entradas invalidas")


-- EXECUTION TIME:
0.18522
-- ERROR:
  File "/home/codebench/codes/1684/1104/main.py", line 4
    =float (input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:14:01) 
-- CODE:
a=float (input ("a: "))
b=float (input ("b: "))
c=float (input ("c: "))
d=float (input ("d: "))
if (b>a and d>c):
    if  ((b>=c and d>=a) or (d>=a and b>=c)):
        print ("Intervalo 1:",a,",",b)
        print ("Intervalo 2:",c,",",d)
        print ("Ha intersecao")
    else:
        print ("Intervalo 1:",a,",",b)
        print ("Intervalo 2:",c,",",d)
        print ("Nao ha intersecao")
else:
    print ("Intervalo 1:",a,",",b)
    print ("Intervalo 2:",c,",",d)
    print ("Entradas invalidas")

-- EXECUTION TIME:
0.187148
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
